argo/argocd/projects/homelab/argocd/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`argocd.pleejr.org`)
    priority: 10
    kind: Rule
    services:
    - name: argocd-server
      port: 80
  - match: Host(`argocd.pleejr.org`) && Header(`Content-Type`, `application/grpc`)
    priority: 11
    kind: Rule
    services:
    - name: argocd-server
      port: 80
      scheme: h2c
  tls:
    certResolver: letsencrypt-staging
